# breezeSquare

./: CMakeLists.txt  Messages.sh  README.md  breeze.h  breeze.json  breezeSquare.h  breezeSquare.json  breezeSquaresettings.kcfgc  breezeSquaresettingsdata.kcfg  breezeappmenubuttongroup.cpp  breezeappmenubuttongroup.h  breezeappmenumodel.cpp  breezeappmenumodel.h  breezeboxshadowrenderer.cpp  breezeboxshadowrenderer.h  breezebutton.cpp  breezebutton.h  breezedecoration.cpp  breezedecoration.h  breezeexceptionlist.cpp  breezeexceptionlist.h  breezemenuoverflowbutton.cpp  breezemenuoverflowbutton.h  breezesettings.kcfgc  breezesettingsdata.kcfg  breezesettingsprovider.cpp  breezesettingsprovider.h  breezesizegrip.cpp  breezesizegrip.h  breezetextbutton.cpp  breezetextbutton.h  build.sh  config-breeze.h.cmake
config/: Preview.xcf  breezeSquaredecorationconfig.desktop  breezeconfigwidget.cpp  breezeconfigwidget.h  breezedetectwidget.cpp  breezedetectwidget.h  breezeexceptiondialog.cpp  breezeexceptiondialog.h  breezeexceptionlistwidget.cpp  breezeexceptionlistwidget.h  breezeexceptionmodel.cpp  breezeexceptionmodel.h  breezeitemmodel.cpp  breezeitemmodel.h  breezelistmodel.h
config/ui/: breezeconfigurationui.ui
libbreezecommon/: CMakeLists.txt
